[tool.poetry]
name = "test-driven-development-in-python"
version = "0.1.0"
description = ""
authors = ["ryoherisson <42690204+ryoherisson@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
